[project]
name = "mdlm-sft"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "torch",
    "transformers",
    "accelerate",
    "hydra-core",
    "trl",
    "tensorboardX",
    "tensorboard",
    "wtpsplit",
    "cryptography",
    "torchvision",
    "wandb",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdlm_sft"]
