[project]
name = "mdlm-sft"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets==4.8.5",
    "torch",
    "transformers",
    "accelerate",
    "hydra-core",
    "trl",
    "tensorboardX",
    "tensorboard",
    "wtpsplit",
    "cryptography",
    "torchvision",
    "wandb",
    "huggingface_hub",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdlm_sft"]
