[project]
name = "mdlm-sft"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets==4.8.5",
    "torch",
    "transformers==5.10.1",
    "accelerate",
    "hydra-core",
    "trl==1.5.1",
    "tensorboardX",
    "tensorboard",
    "wtpsplit",
    "cryptography",
    "torchvision",
    "wandb",
    "huggingface_hub",
    "liger-kernel; sys_platform == 'linux'",
    "accelerate",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdlm_sft"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]